crates/takusu-agent/tests/snapshots/schema_snapshots__tool_reschedule.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Create a partial reschedule proposal. Calling this tool generates a pending approval request; it does not write immediately.",
    "name": "reschedule",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "from": {
          "description": "Start of range; interpreted in server timezone if no offset is given.",
          "type": "string"
        },
        "mode": {
          "type": "string"
        },
        "pinned": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "proposal_id": {
          "description": "Optional proposal id. Set the same value across multiple related tool calls to group them into a single proposal for review.",
          "type": "string"
        },
        "sleep": {
          "type": "string"
        },
        "task_ids": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "until": {
          "description": "End of range; interpreted in server timezone if no offset is given.",
          "type": "string"
        },
        "warnings": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "why": {
          "description": "Short user-facing reason for the proposed change.",
          "type": "string"
        }
      },
      "required": [
        "mode"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
