crates/takusu-agent/tests/snapshots/schema_snapshots__tool_similar_tasks.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
assertion_line: 51
expression: def
---
{
  "function": {
    "description": "Find completed tasks with titles similar to the given title. Use before create_task to estimate avg_minutes / sigma_minutes from past actuals and comments; also use when inferring quantity for a new task.",
    "name": "similar_tasks",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "limit": {
          "description": "Maximum results (default 10, max 50).",
          "type": "integer"
        },
        "title": {
          "description": "Title to compare against completed tasks.",
          "type": "string"
        }
      },
      "required": [
        "title"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
