crates/takusu-agent/tests/snapshots/schema_snapshots__tool_skills_list.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "List all available skills (built-in and user-defined).",
    "name": "skills_list",
    "parameters": {
      "additionalProperties": false,
      "properties": {},
      "type": "object"
    }
  },
  "type": "function"
}
