crates/takusu-agent/tests/snapshots/schema_snapshots__tool_skills_propose_edit.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Propose editing an existing skill. Requires user approval before it is written.",
    "name": "skills_propose_edit",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "body": {
          "type": "string"
        },
        "description": {
          "type": "string"
        },
        "inferred_fields": {
          "description": "Fields inferred from user input.",
          "items": {
            "additionalProperties": false,
            "properties": {
              "field": {
                "description": "Name of the inferred field.",
                "type": "string"
              },
              "reason": {
                "description": "Reason the field was inferred.",
                "type": "string"
              },
              "value": {
                "description": "Inferred value for the field."
              }
            },
            "required": [
              "field",
              "value",
              "reason"
            ],
            "type": "object"
          },
          "type": "array"
        },
        "name": {
          "type": "string"
        },
        "proposal_id": {
          "description": "Optional proposal id. Set the same value across multiple related tool calls to group them into a single proposal for review.",
          "type": "string"
        },
        "slug": {
          "type": "string"
        },
        "warnings": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "why": {
          "type": "string"
        }
      },
      "required": [
        "slug"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
