crates/takusu-agent/tests/snapshots/schema_snapshots__tool_task_complete.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Propose completing a task. Closes the open work session and records the total active time. If task_ref is omitted, asks for clarification. Requires approval before writing.",
    "name": "task_complete",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "task_ref": {
          "description": "Task reference such as #42 or h1#3. Omit if the user did not specify a task; a focused clarification will be returned.",
          "type": "string"
        }
      },
      "type": "object"
    }
  },
  "type": "function"
}
